objects/MC4SF__MC_Subscriber_Activity__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Bounce_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bounce Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Campaign</label>
        <referenceTo>MC4SF__MC_Campaign__c</referenceTo>
        <relationshipLabel>MC Subscriber Activity</relationshipLabel>
        <relationshipName>MC_Subscriber_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC List</label>
        <referenceTo>MC4SF__MC_List__c</referenceTo>
        <relationshipLabel>MC Subscriber Activity</relationshipLabel>
        <relationshipName>MC_Subscriber_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>MC Subscriber Activity</relationshipLabel>
        <relationshipName>MC_Subscriber_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_Campaign_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MailChimp Campaign ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Text_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Text URL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Timestamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>MC Subscriber Activity</label>
    <listViews>
        <fullName>MC4SF__All</fullName>
        <columns>MC4SF__MC_List__c</columns>
        <columns>MC4SF__MC_Subscriber__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Subscriber Activity-{00000}</displayFormat>
        <label>MC Subscriber Activity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC Subscriber Activity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>